--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     </head>
     
     <body>
-        <h1> Cronômetro </h1>
+        <h1> Pomodoro </h1>
             <p>
-                <span id="segundos">
-                    00
+                <span id="minutos">
+                    25
                 </span>
                     :
-                <span id="decimos">
-                00
+                <span id="segundos">
+                    00
                 </span>
             </p>
             
